2005-02-27 22:01 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (minCellFaceAreaUV) created to find the
	smallest UV area of a cell face. to be used for cost constraint.

2005-02-27 21:35 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (faceAreaUV,minFaceAreaUV) inserted methods
	from gridcad. This introduces a dependency on CADGeom for
	CADGeom_ReversedSurfaceNormal. To allow for the construction
	of a grid cost constraint on face surface area.
	* src/gridcad.c (faceAreaUV,minFaceAreaUV) moved methods to
	gridmetric.

2005-02-21 00:06 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotComment) To allow the insertion of
	comments into tecplot files I added this function.
	* src/gridfortran.c (gridwritetecplotsurfacezone_) dump flagged
	cell info to tecplot file as comments instead of stdout. This is
	to make it easier to investigate negative cells by having full
	info on hte cell next to its geometry.
	
2005-02-17 22:36 Mike Park  <mike.park@nasa.gov>

	* src/FAKEGeomExtras.c (ErrMgr_Append) Added for fake
	CADGeom_ReversedSurfaceNormal call to allow adaptation without the
	SDK.
	
2005-02-16 15:15 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridcad.c (gridFaceAreaUV) check orientation of surface to
	Face and negate area as necessary.

2005-02-14 08:23 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridwritetecplotsurfacezone_) dump flagged
	cell info (local and global ids) to stdout.

2005-02-13 11:35 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridOptimizeUVForVolume) added face UV area check
	to prevent face area from dropping below 1.0e-12 while trying yo
	improve cell volume. It will continue to smooth below this area if
	area is increasing.
	* src/gridcad.c (gridSmartVolumeLaplacian) fixed an old copy and
	paste bug. Now it uses the correct gridNodeVolume cost instead of
	the copyied gridNodeAR.
	* src/gridcad.c (gridSmoothNodeVolumeSimplex) decreased its
	convergence tolerence to 1.0e-10 from 1.0e-8.
	