@@ -3943,8 +3943,9 @@ Grid *gridSetCostFunction(Grid *grid, int costFunction)
 Grid *gridSetCostConstraint(Grid *grid, int costConstraint)
 {
   if ( costConstraint < 0 || 
-       costConstraint > (gridCOST_CNST_VOLUME|gridCOST_CNST_VALID) ) 
-    return NULL;
+       costConstraint > ( gridCOST_CNST_VOLUME | 
+			  gridCOST_CNST_VALID  |
+			  gridCOST_CNST_AREAUV ) ) return NULL;
   grid->costConstraint = costConstraint;
   return grid;
 }
