@@ -1,3 +1,10 @@
+2005-02-27 22:18 Mike Park  <mike.park@nasa.gov>
+
+	* src/grid.c (gridCostConstraint,gridSetCostConstraint) added
+	new gridCOST_CNST_AREAUV.
+	* src/gridmetric.c (gridAR) added gridCOST_CNST_AREAUV
+	gridCostConstraint to check gridMinCellFaceAreaUV.
+
 2005-02-27 22:01 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridmetric.c (minCellFaceAreaUV) created to find the
